--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,14 +3,9 @@
 <div class="container clearfix">
 <div class="row">
 
-<div class="col-sm-12 visible-sm">
-<h2><span class="fa fa-cog"></span> Projects</h2>
-</div>
-
-
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Mini Operating System</a></p>
+<p><a target="_blank" href="https://github.com/debashisbarman/Mini-OS">Mini Operating System</a></p>
 </div>
 <div class="col-lg-6 col-md-8 col-sm-12">
 <p>Bare Bone Operating System written in C and Assembly</p>
@@ -19,16 +14,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Random Security Code Generator</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Document verification system as a part of Digital India project</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Kathamo 2.0.0</a></p>
+<p><a target="_blank" href="{{ "/Kathamo" | prepend: site.baseurl }}">Kathamo 2.0.0</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Kathamo is a minimalist mobile friendly CSS framework</p>
@@ -37,7 +23,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Knowlege Exchange Network</a></p>
+<p><a target="_blank" href="http://www.kenmanipur.org">Knowlege Exchange Network</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Official website for Knowledge Exchange Network</p>
@@ -46,34 +32,34 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">PhD. Activity Management System</a></p>
+<p><a class="ongoing-project" href="">PhD. Activity Management System</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
-<p>Software for Director of Research, Assam Don Bosco University</p>
+<p>Software for Director of Research, Assam Don Bosco University <span class="ongoing-project">( ongoing project )</span></p>
 </div>
 </div>
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Smart ADBU</a></p>
+<p><a class="ongoing-project" href="">Smart ADBU</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official android app for Assam Don Bosco University</p>
+<p>Official android app for Assam Don Bosco University <span class="ongoing-project">( ongoing project )</span></p>
 </div>
 </div>
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">North Kamrup College</a></p>
+<p><a class="ongoing-project" href="">North Kamrup College</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website for North Kamrup College</p>
+<p>Official website for North Kamrup College <span class="ongoing-project">( ongoing project )</span></p>
 </div>
 </div>
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Surajit Barman</a></p>
+<p><a target="_blank" href="http://www.surajitbarman.in">Surajit Barman</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Official website for Dr. Surajit Barman</p>
@@ -82,7 +68,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Indeva.in</a></p>
+<p><a target="_blank" href="{{ "/Indeva" | prepend: site.baseurl }}">Indeva.in</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Official website of Initiative for Development Activities in India</p>
@@ -91,19 +77,10 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">Sherlock Holmes</a></p>
+<p><a target="_blank" href="{{ "/Sherlock-Holmes" | prepend: site.baseurl }}">Sherlock Holmes</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Conceptual design for Sherlock Holmes about page</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a href="">North Kamrup College</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website for North Kamrup College</p>
 </div>
 </div>
 
