--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -23,7 +23,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://www.kenmanipur.org">Knowlege Exchange Network</a></p>
+<p><a target="_blank" href="http://www.kenmanipur.org">Knowledge Exchange Network</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Official website for Knowledge Exchange Network</p>
