--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
 h2 { color: #4c6672; padding-bottom: 21px;  }
 p { font-size: 15px; }
 
+img { box-shadow: 0px 2px 2px 2px #f3f5f6; }
+
 .ongoing-project { cursor: pointer; pointer-events: none; }
 span.ongoing-project { color: #a0a0a0; }
 
