--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@ img { box-shadow: 0px 0px 3px 2px #f3f5f6; }
 span.ongoing-project { color: #a0a0a0; }
 
 /* Header */
-header { height: auto; background-color: #4c6672; color: #fff; padding: 55px 0; }
+header { height: auto; background-color: #4c6672; color: #fff; padding: 55px 0 89px 0; }
 header a h1 { /* font-size: 34px; */ font-weight: 300; }
 header a h1 strong { font-weight: 500; }
 header p { font-size: 18px; margin: 34px 0 0 0; }
