--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -59,7 +59,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://www.surajitbarman.in">Surajit Barman</a></p>
+<p><a target="_blank" href="http://www.surajitbarman.in">Dr. Surajit Barman</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Official website for Dr. Surajit Barman</p>
