--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,7 +14,7 @@
 
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="{{ "/Kathamo" | prepend: site.baseurl }}">Kathamo 2.0.0</a></p>
+<p><a target="_blank" href="http://kathamo.github.io">Kathamo 2.0.0</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
 <p>Kathamo is a minimalist mobile friendly CSS framework</p>
