--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,9 +60,10 @@ footer a:hover, footer a:focus { color: #fff; border-bottom: none; }
 footer ul.li-inline { font-size: 13px; }
 
 /* Media queries */
-@media (min-width: 1024px) {
-
+@media (min-width: 768px) {
+p { font-size: 18px; }
 }
+
 @media (max-width: 767px) {
 header { padding: 34px 0; }
 h6, p { line-height: 2; }
