--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -35,7 +35,7 @@
 <p><a class="ongoing-project" href="">PhD. Activity Management System</a></p>
 </div>
 <div class="col-lg-8 col-md-8 col-sm-12">
-<p>Software for Director of Research, Assam Don Bosco University <span class="ongoing-project">( ongoing project )</span></p>
+<p>Software for Director of Research, Assam Don Bosco University</p>
 </div>
 </div>
 
