--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 <p>Keep track via <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS <span class="fa fa-2x fa-rss fa-fw"></span></a></p>
 <ul class="li-inline">
 <li><span class="fa fa-cog"></span> Built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a></li>
-<li><span class="fa fa-copyright"></span> 2015 Debashis Barman</li>
+<li><span class="fa fa-copyright"></span> <a href="">2015 Debashis Barman</a></li>
 </ul>
 </div>
 </div>
