--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -3,11 +3,17 @@
 <div class="container clearfix">
 <div class="row">
 
+
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<span class="fa fa-bookmark fa-2x subtitle-icon"></span>
+<h2>Some articles here!</h2>
+</div>
+
 {% for post in site.posts %}
 <div class="col-lg-12 col-md-12 col-sm-12">
 <article class="clearfix">
 <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><span class="visible-sm pull-right">+</span>
-<span class="pull-right hidden-sm date">{{ post.date | date_to_string }}</span></p>
+<span class="pull-right hidden-sm date">{{ post.date | date: "%B %-d, %Y" }}</span></p>
 </article>
 </div>
 {% endfor %}
