--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,11 +3,18 @@
 <div class="container clearfix">
 <div class="row">
 
+<div class="section">
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<span class="fa fa-cog fa-2x subtitle-icon"></span>
+<h2>Development works...</h2>
+</div>
+</div>
+
 <div class="section clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12 text-right">
 <p><a target="_blank" href="https://github.com/debashisbarman/Mini-OS">Mini Operating System</a></p>
 </div>
-<div class="col-lg-6 col-md-8 col-sm-12">
+<div class="col-lg-8 col-md-8 col-sm-12">
 <p>Bare Bone Operating System written in C and Assembly</p>
 </div>
 </div>
