--- a/_includes/references.html
+++ b/_includes/references.html
@@ -3,6 +3,11 @@
 <div class="container clearfix">
 <div class="row">
 
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<span class="fa fa-link fa-2x subtitle-icon"></span>
+<h2>Links to me!</h2>
+</div>
+
 <div class="clearfix">
 <div class="col-lg-4 col-md-4 col-sm-12">
 <ul>
