--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,6 +71,7 @@ p { font-size: 17px; }
 
 @media (max-width: 767px) {
 header { padding: 34px 0; }
+h2 { font-size: 21px; }
 h6, p { line-height: 2; }
 .article article { border-bottom: 1px dotted #dbe0e3; }
 .article a, .article a:hover { border-bottom: none; }
