--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -5,7 +5,7 @@
 
 
 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<span class="fa fa-bookmark fa-2x subtitle-icon"></span>
+<span class="fa fa-bookmark-o fa-2x subtitle-icon"></span>
 <h2>Some articles here!</h2>
 </div>
 
