--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="clearfix">
 <div class="container">
 <div class="row">
-<div class="col-lg-offset-1 col-lg-10 col-md-12 col-sm-12 text-center">
+<div class="col-lg-10 col-md-12 col-sm-12">
 <h1><strong>Debashis</strong> Barman</h1>
 
 <p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and developer; works at <span class="fa fa-fw fa-github"></span> <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
