--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,9 +4,8 @@
 <div class="row">
 
 <div class="section">
-<div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<span class="fa fa-cog fa-2x subtitle-icon"></span>
-<h2>Development works...</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 text-center"> 
+<h2><span class="fa fa-cog fa-fw"></span> Development works...</h2>
 </div>
 </div>
 
