--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -5,8 +5,7 @@
 
 
 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<span class="fa fa-bookmark fa-2x subtitle-icon"></span>
-<h2>Some articles here!</h2>
+<h2><span class="fa fa-bookmark fa-fw"></span> Some articles here!</h2>
 </div>
 
 {% for post in site.posts %}
