--- a/_includes/references.html
+++ b/_includes/references.html
@@ -3,9 +3,8 @@
 <div class="container clearfix">
 <div class="row">
 
-<div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<span class="fa fa-link fa-2x subtitle-icon"></span>
-<h2>Links to me!</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 text-left">
+<h2><span class="fa fa-link fa-fw"></span> Links to me!</h2>
 </div>
 
 <div class="clearfix">
