--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -4,7 +4,7 @@
 <div class="row">
 
 
-<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<div class="col-lg-12 col-md-12 col-sm-12">
 <h2><span class="fa fa-bookmark fa-fw"></span> Some articles here!</h2>
 </div>
 
