--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 <div class="row">
 
 <div class="section">
-<div class="col-lg-12 col-md-12 col-sm-12 text-center"> 
+<div class="col-lg-12 col-md-12 col-sm-12"> 
 <h2><span class="fa fa-cog fa-fw"></span> Development works...</h2>
 </div>
 </div>
