--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
 
 <div class="section">
 <div class="col-lg-12 col-md-12 col-sm-12"> 
-<h2><span class="fa fa-cog fa-fw"></span> Development works...</h2>
+<h2><span class="fa fa-cog"></span> Development works...</h2>
 </div>
 </div>
 
