--- a/_includes/references.html
+++ b/_includes/references.html
@@ -4,7 +4,7 @@
 <div class="row">
 
 <div class="col-lg-12 col-md-12 col-sm-12 text-left">
-<h2><span class="fa fa-link fa-fw"></span> Links to me!</h2>
+<h2><span class="fa fa-link"></span> Links to me!</h2>
 </div>
 
 <div class="clearfix">
