--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -4,8 +4,9 @@
 <div class="row">
 
 
-<div class="col-lg-12 col-md-12 col-sm-12">
-<h2><span class="fa fa-bookmark"></span> Some articles here!</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<span class="fa fa-bookmark fa-3x subtitle-icon"></span>
+<h2>Some articles here!</h2>
 </div>
 
 {% for post in site.posts %}
@@ -21,3 +22,4 @@
 </div>
 </div>
 <!-- Articles end -->
+
