--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,8 +4,8 @@
 <div class="row">
 
 <div class="section">
-<div class="col-lg-12 col-md-12 col-sm-12"> 
-<h2><span class="fa fa-cog"></span> Development works...</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<h2><span class="fa fa-cog fa-3x subtitle-icon"></span> Development works...</h2>
 </div>
 </div>
 
@@ -103,3 +103,4 @@
 </div>
 </section>
 <!-- Projects end -->
+
