--- a/_includes/references.html
+++ b/_includes/references.html
@@ -3,8 +3,8 @@
 <div class="container clearfix">
 <div class="row">
 
-<div class="col-lg-12 col-md-12 col-sm-12 text-left">
-<h2><span class="fa fa-link"></span> Links to me!</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<h2><span class="fa fa-link fa-3x subtitle-icon"></span> Links to me!</h2>
 </div>
 
 <div class="clearfix">
@@ -39,3 +39,4 @@
 </div>
 </div>
 <!-- References end -->
+
