--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,8 @@
 
 <div class="section">
 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<h2><span class="fa fa-cog fa-3x subtitle-icon"></span> Development works...</h2>
+<span class="fa fa-cog fa-3x subtitle-icon"></span>
+<h2>Development works...</h2>
 </div>
 </div>
 
