--- a/_includes/references.html
+++ b/_includes/references.html
@@ -4,7 +4,8 @@
 <div class="row">
 
 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-<h2><span class="fa fa-link fa-3x subtitle-icon"></span> Links to me!</h2>
+<span class="fa fa-link fa-3x subtitle-icon"></span>
+<h2>Links to me!</h2>
 </div>
 
 <div class="clearfix">
