--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,108 +8,102 @@
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
 <link rel="stylesheet" href="{{ "/kathamo/kathamo.css" | prepend: site.baseurl }}"/>
-<link rel="stylesheet" href="{{ "/font-awesome-4.2.0/css/font-awesome.css" | prepend: site.baseurl }}"/>
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link href="{{ "/images/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
 <style>
-/* Global */
-.fa.subtitle-icon { color: #4c6672; padding-bottom: 8px; }
-h2 { color: #4c6672;  }
+/* Icons */
+.svg-icon { width: 1em; height: 1em; padding: 3px 0; }
+.svg-icon path, .svg-icon polygon, .svg-icon rect { fill: #4c6672; }
+.svg-icon circle { stroke: #4c6672; stroke-width: 1; }
 
+/* Anchors */
+a, a:visited { color: #4c6672; text-decoration: none; outline: 0; font-weight: 500; }
+a:hover, a:focus { color: #4c6672; border-bottom: 1px solid #4c6672; }
+p a, p a:visited { line-height: inherit; }
 
-img { box-shadow: 0px 0px 3px 2px #f3f5f6; }
+/* Homepage */
+#home .ongoing-project { cursor: pointer; pointer-events: none; }
 
-.ongoing-project { cursor: pointer; pointer-events: none; }
-span.ongoing-project { color: #a0a0a0; }
+#home header { color: #ffffff; background-color: #4c6672; padding: 55px 0 34px 0; }
+#home h1 { text-transform: uppercase; }
+#home h6 { text-transform: uppercase; }
+#home header h6:before { content: "\2014 \0020"; padding-right: 13px; }
+#home header h6:after { content: "\2014 \0020"; padding-left: 13px; }
 
-/* Header */
-header { height: auto; background-color: #4c6672; color: #fff; padding: 55px 0 89px 0; }
-header a h1 { /* font-size: 34px; */ font-weight: 300; }
-header a h1 strong { font-weight: 500; }
-header p { font-size: 18px; margin: 34px 0 0 0; }
-header a, header a:visited { color: #fff; text-decoration: none; outline: 0; font-weight: 500; }
-header a:hover, header a:focus { color: #fff; border-bottom: none; }
-header p a, header p a:visited { line-height: inherit; }
+#home article.myself { padding: 55px 0 34px 0; line-height: 2; }
+#home article.myself h2 { color: #4c6672; margin: 0; padding: 0; }
+#home article.myself ul.li-inline li { padding: 13px 13px 0 0; }
+#home article.myself ul.li-inline a:hover { border-bottom: none; }
+#home article.myself .hr-line { background-color: #4c6672; height: 150px; width: 1px; margin: 0 auto; }
 
-/* Article */
-.article { padding: 21px 0 34px 0; background-color: #f3f5f6; }
-.article article { padding: 5px 0; border-bottom: 1px dotted #dbe0e3; }
-.article article.no-border-bottom { border-bottom: none; }
-.article .date { color: #a0a0a0; font-weight: 500; }
-.article a { color: #4c6672; text-decoration: none; outline: 0; font-weight: 500; padding: 0 0 5px 0; /* border-bottom: 1px solid #4c6672; */ border-bottom: none; }
-.article a:hover, .article a:focus { color: #4c6672; padding: 0 0 3px 0; /* border-bottom: 1px solid #4c6672; */ border-bottom: none; }
-.article p a, .article p a:visited { line-height: inherit; }
-.article p { margin: 21px 0 0 0; line-height: 1.618; }
+#home article.mywork { background-color: #f3f5f6; padding: 55px 0 34px 0; line-height: 2; }
+#home article.mywork ul li { margin-bottom: 21px; }
+#home article.mywork ul li p { line-height: 2; }
+#home article.mywork h2 { color: #4c6672; margin: 0; padding: 0; }
+#home article.mywork .hr-line { background-color: #4c6672; height: 834px; width: 1px; margin: 0 auto; }
 
-/* Project */
-section { padding: 21px 0 34px 0; }
-.section a { color: #4c6672; text-decoration: none; outline: 0; font-weight: 500; padding: 0 0 5px 0; border-bottom: 1px solid #4c6672; }
-.section a:hover, .section a:focus { color: #4c6672; padding: 0 0 5px 0; border-bottom: 1px solid #4c6672; }
-.section p a, .section p a:visited { line-height: inherit; }
-.section p { margin: 21px 0 0 0; line-height: 1.618; }
-
-/* Links */
-.references { padding: 21px 0 21px 0; }
-.references h2 { padding-bottom: 28px; /* Important */ }
-.references li { border-bottom: 1px dotted #dbe0e3; padding-bottom: 5px; }
-.references li .pull-right { color: #dbe0e3; }
-.references a { color: #4c6672; text-decoration: none; outline: 0; font-weight: 500; padding: 0 0 2px 0; border-bottom: none; }
-.references a:hover, .references a:focus { color: #4c6672; padding: 0 0 2px 0; border-bottom: none; }
-
-/* Footer */
-footer { background-color: #4c6672; color: #fff; padding: 21px 0 34px 0; }
-footer a, footer a:visited { color: #fff; text-decoration: none; outline: 0; font-weight: 500; }
-footer a:hover, footer a:focus { color: #fff; border-bottom: none; }
-footer ul.li-inline { font-size: 13px; }
-
-/* Media queries */
-@media (min-width: 768px) {
-h2 { font-size: 34px; }
-.fa.subtitle-icon { font-size: 55px; }
-p { font-size: 15px; }
-}
+#home article.myskills { padding: 55px 0 34px 0; line-height: 2; }
+#home article.myskills h2 { color: #4c6672; margin: 0; padding: 0; }
+#home article.myskills ul li { margin-bottom: 21px; }
+#home article.myskills ul li p { line-height: 2; }
+#home article.myskills div.skill { height: 8px; width: 210px; border: 1px solid #4c6672; }
+#home article.myskills div.skill div.fill { height: 8px; background-color: #4c6672; }
+#home article.myskills .hr-line { background-color: #4c6672; height: 233px; width: 1px; margin: 0 auto; }
 
 @media (max-width: 767px) {
-header { padding: 34px 0; }
-h2 { font-size: 21px; }
-h6, p { line-height: 2; }
-.article article { border-bottom: 1px dotted #dbe0e3; }
-.article a, .article a:hover { border-bottom: none; }
-.article .pull-right { color: #dbe0e3; }
-.section { padding: 13px 0; }
-.section a, .section a:hover { border-bottom: 1px solid #4c6672; }
+#home article.myself h2, article.mywork h2, article.myskills h2 { text-transform: normal ; }
+#home article.myskills div.skill div.fill { float: left; }
 .text-right { text-align: left; }
+.pull-right { float: left; }
 }
 
-/* ***************************************************** */
+@media (min-width: 768px) {
+#home h1 { font-size: 46px; }
+#home article.myself h2, #home article.mywork h2, #home article.myskills h2 { text-transform: uppercase; font-size: 30px; }
+#home article.myskills div.skill div.fill { float: right; }
+}
 
 /* Post */
-.breadcumb { padding: 0 0 13px 0; }
-.post { padding: 34px 0; border-top: 5px solid #4c6672; }
-.title { font-size: 34px; margin: 34px 0 21px 0; font-weight: 500; color: #4c6672; }
-.subtitle { font-size: 21px; margin: 0 0 55px 0; font-weight: 500; color: #a0a0a0; display: block; }
+#post .breadcumb { padding: 0 0 13px 0; }
+#post { padding: 34px 0 0 0; border-top: 5px solid #4c6672; }
+#post .title { margin: 34px 0 21px 0; font-weight: 500; color: #4c6672; }
+#post .subtitle { margin: 0 0 55px 0; font-weight: 500; color: #a0a0a0; display: block; }
 
-.post h2, .post h3, .post h4, .post h5, .post h6 { font-size: 21px; font-weight: 500; color: #4c6672; margin: 55px 0 0 0; }
+#post h2, #post h3, #post h4, #post h5, #post h6 { color: #4c6672; margin: 55px 0 0 0; }
 
-.post p, .post ul { margin: 21px 0; font-size: 15px; line-height: 1.618; }
+#post p, #post ul { margin: 21px 0; line-height: 2; }
+#post ul li { font-weight: 300; }
 
-.post a { color: #4c6672; text-decoration: none; outline: 0; font-weight: 500; padding: 0 0 5px 0; border-bottom: 1px solid #4c6672; }
-.post a:hover, .post a:focus { color: #4c6672; padding: 0 0 5px 0; border-bottom: 1px solid #4c6672; }
-.post p a, .post p a:visited { line-height: inherit; }
-.post p { margin: 21px 0 0 0; line-height: 1.618; }
+#post img { margin: 21px 0; }
 
-.post img { margin: 21px 0; }
+#post blockquote { border-left: 2px solid #4c6672; }
 
-.post blockquote { border-left: 2px solid #4c6672; }
+#post blockquote p { margin: 0; }
 
-.post blockquote p { margin: 0; }
+#post .share { padding: 13px 0 34px 0; background-color: #f3f5f6; }
+#post .share p { margin: 21px 0 0 0; line-height: 2; }
 
-.share { padding: 13px 0 34px 0; background-color: #4c6672; color: #fff; }
-.share a { color: #fff; text-decoration: none; outline: 0; font-weight: 500; padding: 0 0 5px 0; border-bottom: none; }
-.share a:hover, .share a:focus { color: #fff; padding: 0 0 5px 0; border-bottom: none; }
-.share p a, .share p a:visited { line-height: inherit; }
-.share p { margin: 21px 0 0 0; line-height: 1.618; }
+@media (max-width: 767px) {
+#post .title { font-size: 28px; }
+#post .subtitle { font-size: 21px; }
+ul { font-size: 13px; }
+}
 
+@media (min-width: 768px) {
+#post .title { font-size: 34px; }
+#post .subtitle { font-size: 21px; }
+#post h2 { font-size: 28px; text-transform: uppercase; text-align: center; }
+#post h3, #post h4, #post h5, #post h6 { font-size: 21px; text-transform: uppercase; text-align: center; }
+#post h2:before { content: "\2014 \0020"; padding-right: 13px; }
+#post h2:after { content: "\2014 \0020"; padding-left: 13px; }
+}
+
+
+/* Footer */
+footer { color: #ffffff; background-color: #4c6672; padding: 34px 0 21px 0; line-height: 2; }
+footer a, footer a:visited { color: #ffffff; text-decoration: none; outline: 0; font-weight: 500; }
+footer a:hover, footer a:focus { color: #ffffff; border-bottom: 1px solid #ffffff; }
+footer p a, footer p a:visited { line-height: inherit; }
 
 </style>
 </head>
