--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,9 +1,9 @@
 <div class="share clearfix">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-9 col-md-12 col-sm-12 clearfix">
-<p>Did you enjoy this post? If so, <a target="_blank" href="https://twitter.com/share" data-text="Finishing" data-via="orderedlist" data-count="none"><span class="entypo-twitter"></span>share</a> it!</p>
-<p>Have comments on this post or want to discuss further? Hit me up on <span class="fa fa-fw fa-twitter"></span> <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a> and let me know your thoughts.
+<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 clearfix">
+<p>Did you enjoy this post? If so, <a target="_blank" href="https://twitter.com/share" data-text="Finishing" data-via="orderedlist" data-count="none">share</a> it!</p>
+<p>Have comments on this post or want to discuss further? Hit me up on <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a> and let me know your thoughts.
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 </div>
