--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,9 @@
 <!-- Footer starts -->
-<footer class="clearfix">
-<div class="container">
-<div class="row">
+<footer class="text-center">
+<div class="container clearfix">
+<div class="row clearfix">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<p>Keep track via <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS <span class="fa fa-2x fa-rss fa-fw"></span></a></p>
-<ul class="li-inline">
-<li><span class="fa fa-cog"></span> Built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a></li>
-<li><span class="fa fa-copyright"></span> <a href="">2015 Debashis Barman</a></li>
-</ul>
+<p><small>&copy; 2015 <a href="">Debashis Barman</a>. Built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a>.</small></p>
 </div>
 </div>
 </div>
