--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,10 @@
-<header class="clearfix">
-<div class="container">
-<div class="row">
-<div class="col-lg-10 col-md-12 col-sm-12">
-<h1><strong>Debashis</strong> Barman</h1>
-
-<p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and developer; works at <span class="fa fa-fw fa-github"></span> <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
-
-<p>Follow on <span class="fa fa-fw fa-twitter"></span> <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a></p>
+<header class="text-center">
+<div class="container clearfix">
+<div class="row clearfix">
+<div class="col-lg-12 col-md-12 col-sm-12">
+<h1><strong>Debashis Barman</strong></h1>
+<h6>Designer & Developer</h6>
 </div>
 </div>
 </div>
 </header>
-
