--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,100 +1,68 @@
 <!-- Projects Start -->
-<section class="clearfix">
+<article class="mywork clearfix">
 <div class="container clearfix">
-<div class="row">
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="https://github.com/debashisbarman/Mini-OS">Mini Operating System</a></p>
+<div class="row clearfix">
+<div class="col-lg-5 col-md-5 col-sm-12 text-right">
+<h2>Portfolio</h2>
 </div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Bare Bone Operating System written in C and Assembly</p>
+<div class="col-lg-2 col-md-2 hidden-sm text-center">
+<h2><svg class="svg-icon" viewBox="0 0 20 20">
+<path d="M17.638,6.181h-3.844C13.581,4.273,11.963,2.786,10,2.786c-1.962,0-3.581,1.487-3.793,3.395H2.362c-0.233,0-0.424,0.191-0.424,0.424v10.184c0,0.232,0.191,0.424,0.424,0.424h15.276c0.234,0,0.425-0.191,0.425-0.424V6.605C18.062,6.372,17.872,6.181,17.638,6.181 M13.395,9.151c0.234,0,0.425,0.191,0.425,0.424S13.629,10,13.395,10c-0.232,0-0.424-0.191-0.424-0.424S13.162,9.151,13.395,9.151 M10,3.635c1.493,0,2.729,1.109,2.936,2.546H7.064C7.271,4.744,8.506,3.635,10,3.635 M6.605,9.151c0.233,0,0.424,0.191,0.424,0.424S6.838,10,6.605,10c-0.233,0-0.424-0.191-0.424-0.424S6.372,9.151,6.605,9.151 M17.214,16.365H2.786V7.029h3.395v1.347C5.687,8.552,5.332,9.021,5.332,9.575c0,0.703,0.571,1.273,1.273,1.273c0.702,0,1.273-0.57,1.273-1.273c0-0.554-0.354-1.023-0.849-1.199V7.029h5.941v1.347c-0.495,0.176-0.849,0.645-0.849,1.199c0,0.703,0.57,1.273,1.272,1.273s1.273-0.57,1.273-1.273c0-0.554-0.354-1.023-0.849-1.199V7.029h3.395V16.365z"></path>
+</svg></h2>
 </div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://kathamo.github.io">Kathamo 2.0.0</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Kathamo is a minimalist mobile friendly CSS framework</p>
+<div class="col-lg-5 col-md-5 hidden-sm">
+<h2>Articles</h2>
 </div>
 </div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://www.kenmanipur.org">Knowledge Exchange Network</a></p>
+<div class="row clearfix">
+<div class="col-lg-5 col-md-5 col-sm-12 text-right">
+<ul>
+<li>
+<p><a target="_blank" href="https://github.com/debashisbarman/Mini-OS">Mini Operating System</a><br>
+Bare Bone Operating System written in C<br>and Assembly ( ongoing project )
+</p>
+</li>
+<li>
+<p><a target="_blank" href="http://kathamo.github.io">Kathamo 2.0.0</a><br>
+Kathamo is a minimalist mobile<br>friendly CSS framework
+</p>
+</li>
+<li>
+<p><a target="_blank" href="http://www.kenmanipur.org">Knowledge Exchange Network</a><br>
+Official website for Knowledge Exchange Network
+</p>
+</li>
+<li>
+<p><a class="ongoing-project" href="">PhD. Activity Management</a><br>
+Software for Director of Research, Assam Don<br>Bosco University
+</p>
+</li>
+<li>
+<p><a class="ongoing-project" href="">North Kamrup College</a><br>
+Official website for North Kamrup College<br>( ongoing project )
+</p>
+</li>
+<li>
+<p><a target="_blank" href="http://www.surajitbarman.in">Dr. Surajit Barman</a><br>
+Official website for Dr. Surajit Barman
+</p>
+</li>
+<li>
+<p><a target="_blank" href="/Indeva">Indeva</a><br>
+Official website of Initiative for Development Activities in India
+</p>
+</li>
+<li>
+<p><a target="_blank" href="http://onemandesign.github.io">One Man Design</a><br>
+Freelance design and development studio
+</p>
+</li>
+<li>
+<p><a target="_blank" href="/Sherlock-Holmes">Sherlock Holmes</a><br>
+Conceptual design for Sherlock Holmes about page
+</p>
+</li>
+</ul>
 </div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website for Knowledge Exchange Network</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a class="ongoing-project" href="">PhD. Activity Management System</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Software for Director of Research, Assam Don Bosco University</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a class="ongoing-project" href="">Smart ADBU</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official android app for Assam Don Bosco University <span class="ongoing-project">( ongoing project )</span></p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a class="ongoing-project" href="">North Kamrup College</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website for North Kamrup College <span class="ongoing-project">( ongoing project )</span></p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://www.surajitbarman.in">Dr. Surajit Barman</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website for Dr. Surajit Barman</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="{{ "/Indeva" | prepend: site.baseurl }}">Indeva.in</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Official website of Initiative for Development Activities in India</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="http://onemandesign.github.io">One Man Design</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Freelance design and development studio</p>
-</div>
-</div>
-
-<div class="section clearfix">
-<div class="col-lg-4 col-md-4 col-sm-12 text-right">
-<p><a target="_blank" href="{{ "/Sherlock-Holmes" | prepend: site.baseurl }}">Sherlock Holmes</a></p>
-</div>
-<div class="col-lg-8 col-md-8 col-sm-12">
-<p>Conceptual design for Sherlock Holmes about page</p>
-</div>
-</div>
-
-</div>
-</div>
-</section>
 <!-- Projects end -->
 
