--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 
-<div class="post clearfix">
+<div id="post" class="clearfix">
 
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-9 col-md-9 col-sm-12 clearfix">
+<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 clearfix">
 <small class="breadcumb"><a href="{{ site.url }}">Home</a> &gt; {{ page.title }}</small>
 <h1 class="title">{{ page.title }}</h1>
 <span class="subtitle">{{ page.date | date_to_string }}</span>
@@ -14,12 +14,9 @@ layout: default
 </div>
 </div>
 </div>
-</div>
 
 {% include share.html %}
 
-{% include articles.html %}
-
-{% include references.html %}
+</div>
 
 {% include footer.html %}
