--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="text-center">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-12 col-md-12 col-sm-12" data-0="opacity: 1" data-89="opacity: 0">
+<div class="col-lg-12 col-md-12 col-sm-12">
 <h1><strong>Debashis Barman</strong></h1>
 <h6>Designer & Developer</h6>
 </div>
