--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
-<!-- Footer starts -->
-<footer class="text-center">
+<!-- Footer -->
+<footer class="clearfix">
+<div class="footer-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-12 col-md-12 col-sm-12">
-<p><small>&copy; 2015 <a href="">Debashis Barman</a>. Built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a>.</small></p>
+<div class="col-lg-10 col-md-12 col-sm-12 clearfix">
+<br>
+<p>&copy; 2015 Debashis Barman.</p>
+</div>
 </div>
 </div>
 </div>
