--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,17 @@
-<header class="text-center">
+<!-- Header -->
+<header class="clearfix">
+<div class="header-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-12 col-md-12 col-sm-12">
-<h1><strong>Debashis Barman</strong></h1>
-<h6>Designer & Developer</h6>
+<div class="col-lg-12 col-md-12 col-sm-12 clearfix">
+<h1>Hello, world !<br>
+I'm Debashis Barman,<br>
+Web Designer and Developer.
+</h1>
+<p><u>Simplicity</u> is the ultimate sophistication.</p>
+</div>
 </div>
 </div>
 </div>
 </header>
+<!-- Header ends -->
