--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,21 +2,42 @@
 layout: default
 ---
 
-<div id="post" class="clearfix">
+<body class="article" class="clearfix">
 
+<article class="clearfix">
+<div class="article-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 clearfix">
-<small class="breadcumb"><a href="{{ site.url }}">Home</a> &gt; {{ page.title }}</small>
+<div class="col-lg-10 col-md-12 col-sm-12 clearfix">
+<p><small><a href="{{ site.url }}">Home</a> // {{ page.title }}</small></p>
+
+<!-- Page Header -->
 <h1 class="title">{{ page.title }}</h1>
-<span class="subtitle">{{ page.date | date_to_string }}</span>
+<p>Published on {{ page.date | date: "%B %-d, %Y" }}</p>
+<!-- Page Header ends -->
+
+<br>
+<div class="divider"></div>
+<br>
+
+<!-- Page Body -->
+<section class="article-body">
 {{ content }}
+</section>
+<!-- Page Body -->
+
 </div>
 </div>
 </div>
+</div>
+</article>
 
 {% include share.html %}
 
-</div>
+{% include other-articles.html %}
 
 {% include footer.html %}
+
+{% include google-analytics.html %}
+
+</body>
