--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
 <div class="col-lg-10 col-md-12 col-sm-12 clearfix">
 <h2>Want to talk with me ? <a href="mailto:deb.dbuniversity@gmail.com"><strong>Email me.</strong></a></h2>
 <br>
-<p>Feel free to hit me up on <a href="http://twitter.com/iDebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google Plus</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="https://medium.com/@iDeb">Medium</a> or anywhere else you can find me.</p>
+<p>Feel free to hit me up on <a target="_blank" href="https://twitter.com/iDebashisBarman">Twitter</a>, <a target="_blank" href="https://github.com/debashisbarman">Github</a>, <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="https://medium.com/@iDeb">Medium</a> or anywhere else you can find me.</p>
 </div>
 </div>
 </div>
