--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -78,7 +79,7 @@ p a, p a:visited { line-height: inherit; }
 h2 a, h2 a:visited { color: #c0c0c0; border-bottom: none; }
 h2 a:hover, h2 a:focus { color: #555; border-bottom: none; }
 
-.home header p u { line-height: 1.618; border-bottom-color: #fff; }
+.home header p u { padding-bottom: 2px; line-height: 1.618; border-bottom-color: #fff; }
 .article .article-body p { margin-bottom: 34px; }
 .article blockquote { border-left: none; font-weight: 500; margin: 0; padding: 0; }
 .article blockquote p { font-weight: 500; }
