--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="clearfix" data-parallax="scroll" data-image-src="{{ "/assets/images/cover.jpg" | prepend: site.baseurl }}">
+<header class="clearfix" data-parallax="scroll" data-image-src="assets/images/cover.jpg">
 <div class="header-inner">
 <div class="container clearfix">
 <div class="row clearfix">
