--- a/_includes/parallax.html
+++ b/_includes/parallax.html
@@ -1,5 +1,5 @@
 <!-- Parallax -->
 <script>
-$('.parallax-window').parallax({imageSrc: 'bg.jpg'});
+$('.parallax-window').parallax({imageSrc: '{{ "/assets/images/cover.jpg" | prepend: site.baseurl }}'});
 </script>
 <!-- Parallax ends -->
