--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@ body { color: #555; font-weight: normal; }
 
 .divider { clear: both; height: 2px; margin: 5% 0 5% -21px; width: 144px; background: #eaeaea; }
 
-footer { color: #f3f5f6; background-color: #77838f;  }
+footer { color: #f3f5f6; background: url({{ "/images/favicon.ico" | prepend: site.baseurl }}); background-position: bottom center; }
 .footer-inner { padding: 3% 0; }
 
 @media (min-width: 768px) {
