--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,86 +8,9 @@
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
 <link rel="stylesheet" href="{{ "/kathamo/kathamo.css" | prepend: site.baseurl }}"/>
+<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"/>
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link href="{{ "/images/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
 <script src="{{ "js/jquery.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "js/parallax.js" | prepend: site.baseurl }}"></script>
-<style>
-
-/* Basic Styles
-================================================== */
-body { color: #555; font-weight: normal; }
-
-.divider { clear: both; height: 2px; margin: 5% 0 5% -21px; width: 144px; background: #eaeaea; }
-
-footer { color: #f3f5f6; background: url({{ "/assets/images/cover.jpg" | prepend: site.baseurl }}); background-position: bottom center; }
-.footer-inner { padding: 3% 0; }
-
-@media (min-width: 768px) {
-.footer-inner { padding: 3% 0; margin: 0 21px 21px 21px; border: 3px solid #eaeaea; border-top: none; }
-}
-
-
-/* Homepage
-================================================== */
-.home header { color: #f3f5f6; text-transform: uppercase; background: transparent; background-position: center center; }
-.home .header-inner { padding: 55px 0; }
-
-.home .about-article-inner { padding: 5% 0; }
-
-.home .portfolio { background-color: #f3f5f6; }
-.home .portfolio-inner { padding: 5% 0; }
-
-.home .contact-inner { padding: 5% 0; }
-
-@media (min-width: 768px) {
-.home .header-inner { padding: 89px 0; }
-.home .header-inner { padding: 89px 0; margin: 21px 21px 0 21px; border: 3px solid #eaeaea; border-bottom: none; }
-.home .about-article-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
-.home .portfolio-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
-.home .contact-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
-}
-
-
-/* Article
-================================================== */
-.article .article-inner { padding: 5% 0; }
-
-.article .share { background-color: #f3f5f6; }
-.article .share-inner { padding: 5% 0; }
-
-.article .contact-inner { padding: 5% 0; }
-
-@media (min-width: 768px) {
-.article .article-inner { padding: 89px 0 5% 0; margin: 21px 21px 0 21px; border: 3px solid #eaeaea; border-bottom: none; }
-.article .share-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
-.article .contact-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
-}
-
-
-/* Typography
-================================================== */
-h1 { font-weight: 500; line-height: 1.618; letter-spacing: normal; }
-
-h2, h3 { font-weight: 500; }
-
-p, li, li p { font-size: 15px; line-height: 2; }
-
-a, a:visited { color: #555; padding-bottom: 2px; border-bottom: 1px solid #ccc; text-decoration: none; font-weight: 300; }
-a:hover, a:focus { color: #101010; border-bottom: 1px solid #101010; }
-p a, p a:visited { line-height: inherit; }
-
-h2 a, h2 a:visited { color: #c0c0c0; border-bottom: none; }
-h2 a:hover, h2 a:focus { color: #555; border-bottom: none; }
-
-.home header p u { padding-bottom: 2px; line-height: 1.618; border-bottom-color: #fff; }
-.article .article-body p { margin-bottom: 34px; }
-.article blockquote { border-left: none; font-weight: 500; margin: 0; padding: 0; }
-.article blockquote p { font-weight: 500; }
-
-@media (min-width: 768px) {
-p, li, li p { font-size: 21px; line-height: 2; }
-}
-
-</style>
 </head>
