--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@ body { color: #555; font-weight: normal; }
 footer { color: #f3f5f6; background-image: url(../assets/images/cover.jpg); background-position: bottom center; }
 .footer-inner { padding: 3% 0; }
 
+code, pre { background-color: #f3f5f6; border : none; border-radius: 0; }
+
 @media (min-width: 768px) {
 .footer-inner { padding: 3% 0; margin: 0 21px 21px 21px; border: 3px solid #eaeaea; border-top: none; }
 }
