--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,11 @@
 <div class="footer-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-10 col-md-12 col-sm-12 clearfix">
-<br>
+<div class="col-lg-6 col-md-12 col-sm-12 clearfix">
 <p>&copy; 2015 Debashis Barman.</p>
+</div>
+<div class="col-lg-6 col-md-12 col-sm-12 hidden-sm text-right clearfix">
+<p>Built with <a target="_blank" href="http://kathamo.github.io">Kathamo 2.0.0</a>.</p>
 </div>
 </div>
 </div>
