--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 <p>&copy; 2015 Debashis Barman.</p>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 hidden-sm text-right clearfix">
-<p>Built with <a target="_blank" href="http://kathamo.github.io">Kathamo 2.0.0</a>.</p>
+<p>Built with Kathamo 2.0.0.</p>
 </div>
 </div>
 </div>
